Fix some style bleed from wp4.css

--- a/source/wp-content/themes/wporg-parent-2021/sass/base/_elements.scss
+++ b/source/wp-content/themes/wporg-parent-2021/sass/base/_elements.scss
@@ -4,6 +4,7 @@ a {
 	text-decoration: none;
 	text-decoration-thickness: 1px;
 	text-underline-offset: 0.15em;
+	font-weight: revert; // stylelint-disable-line font-weight-notation
 
 	&:hover,
 	&:focus {
